--- a/views/addtask.html
+++ b/views/addtask.html
@@ -4,11 +4,11 @@
     </div>
     <form name="taskForm">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="New task">
+            <input type="text" class="form-control" placeholder="New task" ng-model="task.taskName">
         </div>
 
         <div class="form-group">
-            <a href="#/" class="btn btn-success btn-lg btn-block">
+            <a href="#/" class="btn btn-success btn-lg btn-block" ng-click="save()">
                 <span class="glyphicon glyphicon-pushpin"></span>
                 Save
             </a>
